implemeted user address endpoints
