# routes/api/index.js
@@ -2,10 +2,12 @@ var express = require("express");
 var router = express.Router();
 
 var usersRouter = require("./users");
-var addressRouter = require("./address");
+var addressesRouter = require("./addresses");
+var ordersRouter = require("./orders");
 
 router.use("/users", usersRouter);
-router.use("/address", addressRouter);
+router.use("/addresses", addressesRouter);
+router.use("/orders", ordersRouter);
 
 router.get("/", function (req, res, next) {
   res.redirect("/api-docs");
